# test_first

./: README.md  dev.Dockerfile  docker-compose-dev.yml  entrypoint.sh  pyproject.toml  requirements.txt  test_first.md
.envs/.example/: django.env.example
api/: router.py  serializers.py  tests.py  urls.py  views.py
api/tests/: deals.csv  deals2.csv
clients/: admin.py  models.py  signals.py  tests.py
clients/fixtures/: admin_fixture.json  clients.json
clients/migrations/: 0001_initial.py  0002_alter_client_first_name.py  0003_auto_20210426_0652.py  0004_auto_20210426_0836.py  0005_auto_20210426_0847.py  0006_auto_20210426_1303.py
config/: urls.py  wsgi.py
config/settings/: base.py  production.py
deals/: admin.py  apps.py  models.py  resources.py  signals.py
deals/fixtures/: deals.json  fixtures.json
deals/migrations/: 0001_initial.py  0001_squashed_0002_auto_20210210_0649.py  0002_auto_20210210_1316.py  0003_auto_20210216_1423.py  0004_auto_20210426_0847.py
items/: admin.py  models.py
items/fixtures/: fixtures.json  items.json
items/migrations/: 0001_initial.py  0001_squashed_0003_auto_20210210_0653.py  0002_remove_item_quantity.py  0003_remove_item_price.py  0004_alter_item_name.py
test_first/: settings.py  urls.py
